Fix body overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -24,6 +24,8 @@ body {
 
     display: flex;
     flex-direction: column;
+
+    overflow-x: clip;
 }
 
 a {
